[package]
name = "tcpip-r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
eui48 = "1.1.0"
hex = "0.4.3"
log = "0.4.21"
pnet = "0.34.0"
pnet_datalink = "0.34.0"
rstest = "0.19.0"
